--- a/package.json
+++ b/package.json
@@ -8,11 +8,19 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hanifhel38/chatbot.git"
+  },
+  "bugs": {
+    "url": "https://github.com/hanifhel38/chatbot/issues"
+  },
+  "homepage": "https://github.com/hanifhel38/chatbot#readme",
+  "description": ""
 }
